# cdkw

./: .gitignore  .justfile  CLAUDE.md  DESIGN.md  IDEAS.md  LICENSE  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/cdkw/: __init__.py  cli.py  compose.py  config.py  errors.py  resolve.py  runner.py  ui.py
tests/: conftest.py  test_compose.py  test_config.py  test_dry_run.py  test_resolve.py  test_runner.py
workspace/: .cdkw.yaml  .justfile  README.md  cdk.json  pyproject.toml
workspace/environments/: dev-feature.yaml  local.yaml  stage-check.yaml  test-integration.yaml
workspace/scripts/: hook_post.sh  hook_pre.py
workspace/src/: app.py
workspace/src/config/: environment.py
