[project]
name = "cdkw"
version = "1.0.0"
description = "Thin CDK wrapper CLI for multi-stage, multi-environment, multi-region deployments"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.16",
    "rich>=13.9",
    "pydantic>=2.11",
    "pyyaml>=6.0",
    "questionary>=2.0",
]

[project.scripts]
cdkw = "cdkw.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdkw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
